# JIPP2

./: CMakeLists.txt
Projekt/: CMakeLists.txt
Projekt/include/: daneOPosilkach.h  dokumentacja.h  plik.h  posilek.h
Projekt/src/: main.cpp
Projekt_lib/: CMakeLists.txt
Projekt_lib/src/: dane.cpp  lista.cpp  plik_i_dokumentacja.cpp  posilek.cpp
Przeciazenia/: CMakeLists.txt  main.cpp
allocation_basics/: main.cpp
copyingConstructor/include/: Point.h
copyingConstructor/src/: Point.cpp
dziedziczenie/: CMakeLists.txt  main.cpp
firstLib/include/: lib.h
firstLib/src/: lib.cpp
firstLibCall/: CMakeLists.txt  main.cpp
klasy_i_struktury/: CMakeLists.txt  main.cpp
konstruktory_kopiujace_lab5/: CMakeLists.txt  main.cpp
matrixApp/: CMakeLists.txt  main.cpp
matrixLib/: CMakeLists.txt
matrixLib/include/: MacLib.h
matrixLib/src/: MacLib.cpp
simpleCalc/: CMakeLists.txt
simpleCalc/include/: calc.h
simpleCalc/src/: calc.cpp  main.cpp
