cmake_minimum_required(VERSION 3.16)

add_subdirectory(simpleCalc)

add_subdirectory(allocation_basics)

add_subdirectory(firstLib)

add_subdirectory(firstLibCall)

add_subdirectory(matrixApp)

add_subdirectory(matrixLib)

add_subdirectory(klasy_i_struktury)

add_subdirectory(copyingConstructor)

add_subdirectory(konstruktory_kopiujace_lab5)

add_subdirectory(przeciazenia)

add_subdirectory(dziedziczenie)

add_subdirectory(Projekt_lib)

add_subdirectory(Projekt)



